# poc-ocfs

./: .env  Cargo.toml  Dockerfile  Makefile.toml  build.sh  gitversion.yaml  local_db.sh  start_all.sh
.github/workflows/: adr_api-arm64.yml  adr_api.yml  attorney_advocate_api.yml  case_data_api-arm64.yml  case_data_api.yml  charges_api.yml  ci.yaml  civil_judgments_api.yml  dependency_permanency_api.yml  diversion_api.yml  gateway_api-arm64.yml  gateway_api.yml  hearings_events_api.yml  motions_filings_api.yml  orders_api.yml  participants_api.yml  pleadings_api.yml  post_trial_api.yml  pretrial_intake_api.yml  probate_api.yml  sanctions_api.yml  status_api.yml  template.yml
adr_api/: Cargo.toml  Dockerfile
adr_api/src/: handlers.rs  lib.rs  main.rs  models.rs
adr_api/tests/: integration_test.rs
attorney_advocate_api/: Cargo.toml  Dockerfile  README.md
attorney_advocate_api/src/: handlers.rs  lib.rs  main.rs  models.rs  scratch
attorney_advocate_api/tests/: integration_test.rs
case_data_api/: .env  Cargo.toml  Dockerfile
case_data_api/src/: handlers.rs  lib.rs  main.rs  models.rs
charges_api/: Cargo.toml  Dockerfile
charges_api/src/: handlers.rs  lib.rs  main.rs  models.rs
charges_api/tests/: integration_test.rs
civil_judgments_api/: Cargo.toml  Dockerfile
civil_judgments_api/src/: handlers.rs  lib.rs  main.rs  models.rs
civil_judgments_api/tests/: integration_test.rs
common/: Cargo.toml
common/src/: lib.rs  utils.rs
common/tests/: log_request_test.rs
database_utils/: .env  Cargo.toml  README.md  attorney.md  cases.md  parties.md  types.md
database_utils/migrations/: 000-drop.sql  01-db.sql  20240606055353_initial_db.down.sql  20240606061721_case_data_table.down.sql  20240606061721_case_data_table.up.sql  20240606061953_participants.down.sql  20240606061953_participants.up.sql  20240606062125_attorneyAdvocate.down.sql  20240606062125_attorneyAdvocate.up.sql  20240606062404_pleadings.down.sql  20240606062404_pleadings.up.sql  20240606062633_motionsFilings.down.sql  20240606062633_motionsFilings.up.sql  20240606062736_hearingsEvents.down.sql  20240606062736_hearingsEvents.up.sql  20240606062847_orders.down.sql  20240606062847_orders.up.sql  20240606062934_charges.down.sql  20240606062934_charges.up.sql  20240606063019_pretrialIntake.down.sql  20240606063019_pretrialIntake.up.sql  20240606063054_civilJudgments.down.sql  20240606063054_civilJudgments.up.sql  20240606063149_diversion.down.sql  20240606063149_diversion.up.sql  20240606063332_sanctions.down.sql  20240606063332_sanctions.up.sql  20240606063738_dependencyPermanency.down.sql  20240606063738_dependencyPermanency.up.sql  20240606063837_probateReviewMonitor.down.sql  20240606063837_probateReviewMonitor.up.sql  20240606063936_postTrial.down.sql  20240606063936_postTrial.up.sql  20240606064024_adr.down.sql  20240606064024_adr.up.sql  20240606081759_status.down.sql  20240606081759_status.up.sql  20240607192126_judges.up.sql  20240607221231_cases.up.sql  20240608041627_judges.down.sql  (+4 more)
database_utils/src/: lib.rs
database_utils/tests/: db_utils_test.rs
dependency_permanency_api/: Cargo.toml  Dockerfile
dependency_permanency_api/src/: handlers.rs  lib.rs  main.rs  models.rs
dependency_permanency_api/tests/: integration_test.rs
diversion_api/: Cargo.toml  Dockerfile
diversion_api/src/: handlers.rs  lib.rs  main.rs  models.rs
diversion_api/tests/: integration_test.rs
docket_api/: .env  Cargo.toml
docket_api/src/: handlers.rs  lib.rs  main.rs  models.rs
gateway_api/: Cargo.toml  Dockerfile  README.md
gateway_api/migrations/: 01-users.sql
gateway_api/src/: handlers.rs  lib.rs  main.rs  middleware.rs  users.rs  web.rs
gateway_api/src/web/: app.rs  auth.rs  oauth.rs  protected.rs
gateway_api/templates/: login.html
hearings_events_api/: Cargo.toml  Dockerfile
hearings_events_api/src/: handlers.rs  lib.rs  main.rs  models.rs
hearings_events_api/tests/: integration_test.rs
judges_api/: .env  Cargo.toml  Dockerfile  README.md
judges_api/src/: handlers.rs  lib.rs  main.rs  models.rs
migrations/: 01-db.sql
motions_filings_api/: Cargo.toml  Dockerfile
motions_filings_api/src/: handlers.rs  lib.rs  main.rs  models.rs
motions_filings_api/tests/: integration_test.rs
orders_api/: Cargo.toml  Dockerfile
orders_api/src/: handlers.rs  lib.rs  main.rs  models.rs
orders_api/tests/: integration_test.rs
participants_api/: Cargo.toml  Dockerfile
participants_api/src/: handlers.rs  lib.rs  main.rs  models.rs
participants_api/tests/: integration_test.rs
pdf_api/: Cargo.toml  Dockerfile  README.md
pdf_api/pdfium/osx/: args.gn
pdf_api/pdfium/pdfium-v8-mac-arm64/: args.gn
pdf_api/pdfium/windows/: LICENSE
pdf_api/pdfium/windows/lib/: pdfium.dll.lib
pdf_api/src/: handlers.rs  main.rs  models.rs
pleadings_api/: Cargo.toml  Dockerfile
pleadings_api/src/: handlers.rs  lib.rs  main.rs  models.rs
pleadings_api/tests/: integration_test.rs
post_trial_api/: Cargo.toml  Dockerfile
post_trial_api/src/: handlers.rs  lib.rs  main.rs  models.rs
post_trial_api/tests/: integration_test.rs
pretrial_intake_api/: Cargo.toml  Dockerfile
pretrial_intake_api/src/: handlers.rs  lib.rs  main.rs  models.rs
pretrial_intake_api/tests/: integration_test.rs
probate_api/: .env  Cargo.toml  Dockerfile
probate_api/src/: handlers.rs  lib.rs  main.rs  models.rs
probate_api/tests/: integration_test.rs
sanctions_api/: Cargo.toml  Dockerfile
sanctions_api/src/: handlers.rs  lib.rs  main.rs  models.rs
sanctions_api/tests/: integration_test.rs
src/: db.rs  handlers.rs  main.rs  models.rs
status_api/: Cargo.toml  config.toml
status_api/src/: handlers.rs  lib.rs  models.rs
status_api/tests/: integration_test.rs
templates/case-management/: edit_case.html
templates/proxy-server/: server.js
templates/proxy-server/public/: index.html  test.html
tests/: integration_test.rs
ui/: Cargo.toml  README.md  package-lock.json  package.json
ui/src/: api.rs  app.rs  components.rs  lib.rs  main.rs
ui/src/api/: mod.rs
ui/style/: tailwind.css
(+50 files in other folders)
