[package]
name = "ocfs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["tokio", "http1"] }
serde = { version = "1.0.2", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "uuid", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1.20.3", features = ["full"] }
uuid = "1.8.0"
hyper = { version = "1.3.1", features = ["full"] }
log = "0.4.21"
simplelog = "0.12.2"
serde_json = "1.0.117"
tower = "0.4.13"
dotenv = "0.15"
reqwest = "0.12.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
tokio-retry = "0.3.0"
