[workspace]
members = [
    "case_data_api",
    "participants_api",
    "attorney_advocate_api",
    "pleadings_api",
    "status_api",
    "motions_filings_api",
    "hearings_events_api",
    "orders_api",
    "charges_api",
   # utils
    "database_utils",
    "common"
]
resolver = "2" # Add this line