[workspace]
members = [
    # Gateway
    "gateway_api",
    # utils
    "database_utils",
    "common",
    # ui
    "ui",
    # API
    "case_data_api",
    "participants_api",
    "attorney_advocate_api",
    "pleadings_api",
    "status_api",
    "motions_filings_api",
    "hearings_events_api",
    "orders_api",
    "charges_api",
    "pretrial_intake_api",
    "civil_judgments_api",
    "diversion_api",
    "sanctions_api",
    "dependency_permanency_api",
    "probate_api",
    "post_trial_api",
    "adr_api",
    "pdf_api",
    "judges_api",
    "docket_api"
]
resolver = "2" # Add this line
# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"



[workspace.dependencies]
database_utils = { path = "database_utils" }
common = { path = "common"}
