[package]
name = "adr_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["tokio", "http1"] }
serde = { version = "1.0.2", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "uuid", "runtime-tokio", "tls-native-tls", "macros"] }
tokio = { version = "1.20.3", features = ["full"] }
uuid = "1.8.0"
hyper = { version = "1.3.1", features = ["full"] }
log = "0.4.21"

serde_json = "1.0.117"
tower = "0.4.13"
dotenv = "0.15"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
env_logger = "0.11.3"
common = { git = "https://github.com/tyler-harpool/poc-ocfs.git", version = "0.1.0" }
database_utils = { git = "https://github.com/tyler-harpool/poc-ocfs.git", version = "0.1.0" }
# We leave this commented because it will make docker fail.
#database_utils = { path = "../database_utils" }
#common = { path = "../common"}

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["json"] }


[[bin]]
name = "adr_api"
path = "src/main.rs"