[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
lazy_static = "1.4.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
env_logger = "0.11.3"