[package]
name = "diversion_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["tokio", "http1"] }
serde = { version = "1.0.2", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "uuid", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1.20.3", features = ["full"] }
uuid = "1.8.0"
hyper = { version = "1.3.1", features = ["full"] }
log = "0.4.21"
simplelog = "0.12.2"
serde_json = "1.0.117"
tower = "0.4.13"
dotenv = "0.15"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
tokio-retry = "0.3.0"
env_logger = "0.11.3"

headers = "0.4.0"
axum-extra = {  version = "0.9.3", features=["typed-header"] }
#database_utils = { path = "../database_utils" }
#common = { path = "../common"}
common = { git = "https://github.com/tyler-harpool/poc-ocfs.git", version = "0.1.0" }
database_utils = { git = "https://github.com/tyler-harpool/poc-ocfs.git", version = "0.1.0" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum-test = "14.10.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["json"] }

[[bin]]
name = "diversion_api"
path = "src/main.rs"