[package]
name = "gateway_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
oauth2 = "4.3"
async-session = "3.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
tower-http = { version = "0.5.0", features = ["cors"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
tower = "0.4"

futures = "0.3"
[lib]
name = "gateway_api"
path = "src/lib.rs"

[[bin]]
name = "gateway_api"
path = "src/main.rs"