[package]
name = "pdf_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-tesseract = "1.1.10"
actix = "0.13.5"
actix-multipart = "0.6.2"
actix-web = "4.7.0"
anyhow = "1.0.86"
env_logger = "0.11.3"
serde = { version = "1.0.195", features = ["derive"] }
image = "0.25.1"
pdfium-render = "0.8.18"
tempfile = "3.10.1"
log = "0.4.21"
rayon = "1.5"
regex = "1.10.5"
futures = "0.3.30"
tokio = "1.38.0"
num_cpus = "1.16.0"
